--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -109,7 +109,7 @@
                 Estado
             </label>
             </div>
-            <div class="form-group m-form__group col-md-3 col-lg-3 col-sm-11" *ngIf="estatusSeleccionadas">
+            <div class="form-group m-form__group col-md-2 col-lg-2 col-sm-11" *ngIf="estatusSeleccionadas">
             <select class="form-control m-input" id="exampleSelect1"   [(ngModel)]="estatusFilters.estado" (change)="getEstatus()" name="estado">
                 <option [ngValue]="-1">
                     Todos
@@ -119,11 +119,16 @@
                 </option>
             </select>
         </div>
-		  <div class="form-group m-form__group col-md-3 col-lg-3 col-sm-3" style="text-align: right;" *ngIf="estatusSeleccionadas">
+		  <div class="form-group m-form__group col-md-2 col-lg-2 col-sm-2" style="text-align: right;" *ngIf="estatusSeleccionadas">
 
 		<input type="text" class="form-control m-input m-input--solid" placeholder="Otros Estados"
 			[(ngModel)]="estatusFilters.estado_text" name="search" *ngIf="estatusSeleccionadas"  (keyup.enter)="getEstatus()">
 		</div>
+        <div class="form-group m-form__group col-md-2 col-lg-2 col-sm-2" style="text-align: right;" *ngIf="estatusSeleccionadas">
+
+            <input type="text" class="form-control m-input m-input--solid" placeholder="Bodega"
+                [(ngModel)]="estatusFilters.bodega" name="search" *ngIf="estatusSeleccionadas"  (keyup.enter)="getEstatus()">
+        </div>
     </div>
     <ul class="nav nav-tabs  m-tabs-line m-tabs-line--success" role="tablist">
      
