--- a/src/app/theme/pages/default/extras/extra-formulario/extra-formulario.component.html
+++ b/src/app/theme/pages/default/extras/extra-formulario/extra-formulario.component.html
@@ -1,3 +1,4 @@
+
 <form class="m-form m-form--fit m-form--label-align-right m-form--group-seperator-dashed" #extraForm="ngForm"
       (submit)="onSubmit(extraForm.value)">
     <div class="m-portlet__body">
@@ -47,7 +48,7 @@
         </div>
         <div class="form-group m-form__group row">
             <label class="col-lg-2 col-form-label">
-                Cédula:
+                Cédula*:
             </label>
             <div class="col-lg-3">
                 <input type="text" class="form-control m-input" placeholder="Cédula"
@@ -56,8 +57,74 @@
                     <p class="m--font-danger" *ngIf="identificacion.hasError('required')">El cédula es requerida</p>
                 </section>
             </div>
+            <label class="col-lg-2 col-form-label">
+                Código Postal*:
+            </label>
+            <div class="col-lg-3">
+                <input type="text" class="form-control m-input" placeholder="Código Postal"
+                    [ngModel]="extra.codigo_postal" #codigo_postal="ngModel" name="codigo_postal" required>
+                <section *ngIf="codigo_postal.invalid && codigo_postal.dirty" class="bs">
+                    <p class="m--font-danger" *ngIf="codigo_postal.hasError('required')">El Código Postal es requerido</p>
+                </section>
+            </div>
         </div>
-
+        <div class="form-group m-form__group row">
+                   
+            <label class="col-lg-2 col-form-label">
+                País*:
+            </label>
+            <div class="col-lg-3">
+                <div class="m-loader m-loader--primary m-loader--right" *ngIf="!paises">
+                    <input type="text" class="form-control"/>
+                </div>
+                <select id="pais_id" *ngIf="paises" class="form-control m-input" placeholder="País" (change)="getProvincias(pais_id.value)"
+                        [(ngModel)]="extra.pais.id" #pais_id="ngModel" name="pais_id" required>
+                    <option [value]="" disabled>Seleccione un Pais</option>
+                    <option *ngFor="let pais of paises" [ngValue]="pais.id" >
+                        {{pais.nombre}}
+                    </option>
+                </select>
+            </div>
+            <label class="col-lg-2 col-form-label" >
+                Provincia/Departamento*:
+            </label>
+            <div class="col-lg-3" >
+                <select  class="form-control m-input" placeholder="Provincia" (change)="getCiudades(provincia_id.value)"
+                        [(ngModel)]="extra.provincia.id" #provincia_id="ngModel" name="provincia_id" required>
+                    <option [value]="" disabled>Seleccione una Provincia</option>
+                    <option *ngFor="let provincia of provincias" [value]="provincia.id" >
+                        {{provincia.nombre}}
+                    </option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group m-form__group row">
+            <label class="col-lg-2 col-form-label" >
+                Ciudad Principal*:
+            </label>
+            <div class="col-lg-3">
+                <select class="form-control m-input" placeholder="Ciudad"
+                        [(ngModel)]="extra.ciudad.id" #ciudad_id="ngModel" name="ciudad_id" required (change)="getParroquias(ciudad_id.value)">
+                    <option [value]="" disabled>Seleccione un Ciudad</option>
+                    <option *ngFor="let ciudad of ciudades" [value]="ciudad.id" >
+                        {{ciudad.nombre}}
+                    </option>
+                </select>
+            </div>
+            <label class="col-lg-2 col-form-label" >
+                Ciudad Secundaria y Parroquía:
+            </label>
+            <div class="col-lg-3">
+                <select class="form-control m-input" placeholder="Parroquía"
+                        [(ngModel)]="extra.parroquia.id" #parroquia_id="ngModel" name="parroquia_id">
+                    <option [ngValue]="-1">Seleccione una Parroquía</option>
+                    <option *ngFor="let p of parroquias" [value]="p.id" >
+                        {{p.nombre}}
+                    </option>
+                </select>
+            </div>
+           
+        </div>
     </div>
     <div class="m-portlet__foot m-portlet__no-border m-portlet__foot--fit">
         <div class="m-form__actions m-form__actions--solid">
