--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -875,8 +875,11 @@
                             <div class="col-lg-3">
                                 <input type="text" class="form-control m-input" 
                                        [(ngModel)]="articulodv.trackbox" #awb="ngModel"
-                                       name="awb"
+                                       name="awb" maxlength="100"
                                        required >
+                                <section *ngIf="awb.invalid" class="bs">
+                                    <p class="m--font-danger" *ngIf="awb.hasError('maxlength')">El máximo es 100 caracteres</p>
+                                </section>
                             </div>
                             </div>
                              <div class="form-group m-form__group row">
@@ -886,8 +889,11 @@
                             <div class="col-lg-4">
                                 <input type="text" class="form-control m-input" placeholder="Tienda o Usuario NO REGISTRADO"
                                 [ngModel]="articulodv.tienda_d_v"  #remitente_text="ngModel"
-                                name="remitente_text"
+                                name="remitente_text" maxlength="200"
                                 >
+                                <section *ngIf="remitente_text.invalid" class="bs">
+                                    <p class="m--font-danger" *ngIf="remitente_text.hasError('maxlength')">El máximo es 200 caracteres</p>
+                                </section>
                             </div>
                             <div class="col-lg-4">
                                 <div class="m-loader m-loader--primary m-loader--right" *ngIf="!usuarios">
@@ -982,8 +988,11 @@
                                     <tr *ngFor="let person of paqueteList[0]; let id = index">
                                       
                                         <td  style="font-size: 1.1em !important;">
-                                            <input style="padding:5px; text-align:center;" type="text" 
+                                            <input style="padding:5px; text-align:center;" type="text" maxlength="200"
                                             [(ngModel)]="person.descripcion"  class="form-control m-input" #descripcion="ngModel" name="descripcion_{{id}}" />
+                                            <section *ngIf="descripcion.invalid" class="bs">
+                                                <p class="m--font-danger" *ngIf="descripcion.hasError('maxlength')">El máximo es 200 caracteres</p>
+                                            </section>
                                         </td>
                                         <td style="font-size: 1.1em !important;">
                                             <input style="padding:5px; text-align:center;" type="number"  (change)="updateList(id, 'cantidad', $event)"
