--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -1066,7 +1066,8 @@
                                 <select #domicilio_retiro="ngModel"  [(ngModel)]="entrega.domicilio" name="domicilio_retiro" class="form-control m-input" (change)="domicilioValue(domicilio_retiro.value)">
                                     <option value= "1">DOMICILIO TRAMACO</option>
                                     <option value= "0">RETIRO PUNTO TRAMACO</option>
-                                    <option value= "2">MATRIZ GYE</option>
+                                    <option value= "2">MATRIZ</option>
+                                    <option value= "4" >PUNTO ADUANA QUITO</option>
                                 </select>
                             </div>
                            
