--- a/src/app/theme/pages/default/mi-casillero/instrucciones-datatable/instrucciones-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/instrucciones-datatable/instrucciones-datatable.component.html
@@ -476,7 +476,7 @@
                             </label>
                             <div class="col-lg-9">
                                 <textarea class="form-control m-input" placeholder="Anotación"
-                                          [ngModel]="entrega.nota_retiro" #notaRetiro="ngModel"
+                                          [ngModel]="entrega.nota_retiro" #notaRetiro="ngModel" maxlength="255"
                                           name="notaRetiro">
                                 </textarea>
                             </div>
@@ -663,7 +663,7 @@
                             </label>
                             <div class="col-lg-9">
                                 <input type="text" class="form-control m-input" placeholder="Anotación"
-                                [ngModel]="entrega.nota" #nota="ngModel"
+                                [ngModel]="entrega.nota" #nota="ngModel" maxlength="255"
                                 name="nota">
                             
                             </div>
